# wasmtime

./: .gitmodules  Cargo.toml  build.rs
cranelift/: Cargo.toml
cranelift/codegen/meta/src/isa/x86/: encodings.rs
cranelift/codegen/meta/src/shared/: formats.rs  instructions.rs
cranelift/codegen/src/: write.rs
cranelift/codegen/src/verifier/: mod.rs
cranelift/filetests/: Cargo.toml
cranelift/filetests/filetests/isa/x86/: simd-bitwise-run.clif
cranelift/filetests/filetests/preopt/: branch.clif  interpreter-dce.clif  interpreter.clif
cranelift/filetests/src/: function_runner.rs  lib.rs  test_interpret.rs  test_run.rs
cranelift/interpreter/: Cargo.toml  README.md
cranelift/interpreter/src/: environment.rs  frame.rs  interpreter.rs  lib.rs  runner.rs  tracing.rs  value.rs
cranelift/interpreter/src/clif/: parser.rs
cranelift/interpreter/tests/: add-with-tracing.clif  add.clif  fibonacci.clif  filetests.rs  mod.rs  tracing.rs
cranelift/preopt/: Cargo.toml
cranelift/preopt/src/: constant_folding.rs  lib.rs
cranelift/reader/: Cargo.toml
cranelift/reader/src/: lib.rs  parser.rs  run_command.rs
cranelift/serde/src/: serde_clif_json.rs
cranelift/src/: interpret.rs  run.rs  utils.rs
cranelift/value/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: types.rs
crates/bench-api/: Cargo.toml
crates/bench-api/src/: lib.rs
crates/debug/: Cargo.toml
crates/environ/: Cargo.toml
crates/fuzzing/: Cargo.toml
crates/interface-types/: Cargo.toml
crates/jit/: Cargo.toml
crates/jit/src/: action.rs
crates/lightbeam/: Cargo.toml
crates/misc/py/: Cargo.toml
crates/runtime/: Cargo.toml
crates/test-programs/: Cargo.toml
crates/wasi/: Cargo.toml
crates/wasi-c/: Cargo.toml
crates/wasi-nn/: Cargo.toml
crates/wasi-nn/src/: ctx.rs  openvino.rs
crates/wasi-parallel/: .gitignore  Cargo.toml  README.md  build.rs
crates/wasi-parallel/benches/: arithmetic.rs  matrix_mul.rs  nstream.rs  nstream_cpp.rs  run.rs
crates/wasi-parallel/benches/arithmetic/: parallel.wat  sequential.wat
crates/wasi-parallel/benches/cl/: nstream_cpp.cl
crates/wasi-parallel/benches/cpp/: matrix_mul.cpp  nstream_cpp.cpp
crates/wasi-parallel/benches/nstream/: parallel.wat  sequential.wat
crates/wasi-parallel/examples/: attach-spirv.rs
crates/wasi-parallel/src/: context.rs  impl.rs  lib.rs  witx.rs
crates/wasi-parallel/src/device/: cpu.rs  cpu_single_threaded.rs  mod.rs  opencl.rs  wasm_memory_buffer.rs
crates/wasi-parallel/tests/: cli.rs
crates/wasi-parallel/tests/cl/: fill.cl
crates/wasi-parallel/tests/cpp/: fill.cpp  wasi_parallel.h
crates/wasi-parallel/tests/rust/: buffer.rs  wasi_parallel.rs
crates/wasi-parallel/tests/wasm/: buffer.wasm
crates/wasi-parallel/tests/wat/: parallel-for.wat
crates/wasmtime/src/: func.rs
crates/wast/: Cargo.toml
crates/wast/src/: wast.rs
crates/wiggle/generate/src/: lib.rs
crates/wiggle/generate/src/types/: variant.rs
src/: lib.rs
src/commands/: run.rs
