[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift-preopt"
version = "0.75.0"
description = "Support for optimizations in Cranelift"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cranelift-preopt"
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
keywords = ["optimize", "compile", "compiler", "jit"]
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../codegen", version = "0.75.0", default-features = false }
cranelift-entity = { path = "../entity", version = "0.75.0" }
cranelift-interpreter = { path = "../interpreter", version = "0.75.0" }
log = { version = "0.4", default-features = false }
# This is commented out because it doesn't build on Rust 1.25.0, which
# cranelift currently supports.
# rustc_apfloat = { version = "0.1.2", default-features = false }

[badges]
maintenance = { status = "experimental" }
